--- a/banner.html
+++ b/banner.html
@@ -158,7 +158,7 @@
 <script>
     var prev = document.getElementById("prev");
     var next = document.getElementById("next");
-    var arr = ["img/s.png","img/d.png","img/h.png","img/t.png","img/v.png"];
+    var arr = ["http://img.hb.aicdn.com/c6183534d4ee5ac2e6e39609c22dd49c3f52ae9e1f49f-L0roxp_fw658","http://img.hb.aicdn.com/de0a07d85b0879ca1ce5b5bd141f96ad04d5121324d2e-rRqiXg","http://img.hb.aicdn.com/fc2d59415cec49482ec61999a1db424a4a7bb60826ffb-5z6Tow","http://img.hb.aicdn.com/f6c30fd45fff2f57d81db74fc00970a570941afd272ce-AtvOfs","http://img.hb.aicdn.com/038269f9d36c90d0e0fef1e531fec3b612c834d033b2d-DIf5Pj"];
     var imgContainer = document.getElementById("img-container");
     var li = document.getElementsByTagName('li');
     var timer = null;
