--- a/banner.html
+++ b/banner.html
@@ -14,7 +14,7 @@
         #img-container li{position: absolute; top:0; left:0; display: none;}
         #img-container li:first-child{display: block;}
         .show{display:block;}
-        #img-container li img{width:100%; height:100%;}
+        #img-container li img{width:1000px; height:357px;}
         #wrap #prev{
             position: absolute;
             top:50%;left:20px; margin-top:-35px;
